--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1229,15 +1229,12 @@ footer {
   z-index: 1;
   pointer-events: none;
 }
-.recomendacoes-slider {
-  max-width: 800px;
-  margin: 0 auto;
-}
 .recomendacao {
   background-color: rgba(255, 255, 255, 0.05);
   border-radius: 12px;
-  padding: 30px;
+  padding: 40px;
   margin-bottom: 30px;
+  margin-right: 30px;
   border: 1px solid rgba(255, 255, 255, 0.1);
 }
 .recomendacao:hover {
@@ -1245,8 +1242,9 @@ footer {
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
 }
 .recomendacao-texto {
+  margin-top: 20px;
   font-style: italic;
-  padding: 0 20px;
+  padding: 0 30px;
 }
 .recomendacao-texto::before {
   content: "\201C";
@@ -1260,7 +1258,9 @@ footer {
 .recomendacao-autor {
   display: flex;
   align-items: center;
-  margin-top: 20px;
+  margin-top: auto;
+  width: 100%;
+  align-self: flex-start;
 }
 .autor-avatar {
   border-radius: 50%;
@@ -1837,7 +1837,7 @@ nav ul li a.active::before {
   .header-selectors {
     position: absolute;
     top: 10px;
-    right: 60px; /* Espaço para o menu toggle */
+    right: 60px;
   }
 }
 
@@ -1858,11 +1858,11 @@ nav ul li a.active::before {
 }
 .theme-selector {
   /* Seus ajustes específicos */
-  order: 1; /* Ordem de exibição no flexbox */
+  order: 1;
 }
 .language-selector {
   /* Seus ajustes específicos */
-  order: 2; /* Ordem de exibição no flexbox */
+  order: 2;
 }
 
 /* Correção para o botão desaparecer ao clicar */
@@ -1918,4 +1918,10 @@ nav ul li a.active::before {
 }
 .detalhes .skill-tag:hover {
   box-shadow: 0 6px 10px rgba(126, 87, 194, 0.6);
+}
+
+#recomendacoes .autor-info h3,
+.autor-info h4 {
+  margin-bottom: 5px;
+  margin-top: 0;
 }
