--- a/assets/css/swiper.css
+++ b/assets/css/swiper.css
@@ -4,7 +4,6 @@
 .swiper-wrapper {
   max-width: auto;
   padding: 20px 10px;
-  margin: 0 60px 35px;
   overflow: visible;
 }
 
@@ -15,7 +14,7 @@
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
-  overflow: visible;
+  overflow: hidden;
 }
 
 /* =========================
